# auto-car

./: .gitignore  README.md  auto-car-tx2.code-workspace  build.sh  configure  run.bash  run.sh  set_up.sh
bag/: rp_2018-12-03-21-49-25.bag
carsim/: README.md
carsim/car-model/: README.md  RT_Enable.mexw32  RT_Enable.mexw64  UDP_Sfunction.cpp  UDP_Sfunction.h  UDP_open.m  car.cpar  car.mdl  car.mdl.autosave  car10_23.mdl  car10_23.mdl.autosave  car10_23_sfun.mexw64  send_callback.m  simfile.sim  untitled.mat
carsim/car-model/trash/: example.m  rece_callback.m
carsim/udp-communication/: UDP_close.m  example.m
config/servers/: 202-tx2.sh  203-2080-pc.sh  205-pc.sh  NAS-205.sh  sixianka.sh  wf-pc.sh
data/bag/now/: agent_0.bag  agent_0.yaml
docker/: README.md
docker/images/: images-log-lu .md  images-log-ng.md  images-log-nvidia.md  images-log-wufan .md  images-log-wufan.md  images-log.md  release_images.sh
docker/install/: install_docker.sh  install_nvidia_docker.sh
docker/scripts/: dev_into.sh  dev_start.sh  docker_adduser.sh  docker_clean.sh  remove_root_permission.sh
docs/: README.md  docker_rviz_bug  prius.md  start.md  study.md  sys-conf.md  工具库参考.md
docs/planning/: study.md
docs/stm32/: 通信协议 V4.02.xlsx
launch/: auto-car-arm.launch  auto-car-env.launch  auto-car-pc-all-car.launch  auto-car-pc-for-tx2.launch  auto-car-pc-gas-station.launch  auto-car-pc-record.launch  auto-car-pc-static.launch  auto-car-pc.launch  auto-car-tx2.launch  gazebo-simulation.launch  planning-debug.launch  planning.launch
modules/control/common/: CMakeLists.txt
modules/control/controller/: CMakeLists.txt  lon_controller.cc  lon_controller.h
modules/control/proto/: control_proto.sh  pid_conf.pb.cc  pid_conf.pb.h
ros/: .ycm_extra_conf.py  run.bash
ros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros/file/map/: labmap.yaml
ros/launch/: auto-car-nvidia.launch  auto-car-pc-for-nvidia.launch  auto-car-pc-for-tx2.launch  auto-car-pc.launch  auto-car-tx2.launch  auto-car.launch  debugger.launch  planning-debug.launch  planning.launch  test.launch
ros/msgs/msg/: chassis.msg
ros/src/car_demo/: CATKIN_IGNORE  CMakeLists.txt
ros/src/car_msgs/: CMakeLists.txt  package.xml
ros/src/chassis/: CMakeLists.txt  package.xml
ros/src/common/math/: CMakeLists.txt  angle.h  linear_interpolation.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h  search.cc  vec2d.cc  vec2d.h
ros/src/common/math/qp_solver/: CMakeLists.txt  active_set_qp_solver.cc  active_set_qp_solver.h  qp_solver.h  qp_solver_gflags.cc
ros/src/control/: CMakeLists.txt  README.md  package.xml
ros/src/control/src/common/: CMakeLists.txt  pid_controller.cc  trajectory_analyzer.cc
ros/src/control/src/controller/: CMakeLists.txt  control.cc  controller.cc  lat_controller.cc  lon_controller.cc  mpc_controller.cc
ros/src/debuggerpy/: CMakeLists.txt  README.md
ros/src/map/: demo.pdstream
ros/src/msgs/: CMakeLists.txt  package.xml
ros/src/perception/: CMakeLists.txt  README.md  package.xml  perception_conf.yaml
ros/src/planning/: CMakeLists.txt  README.md  planning_conf.yaml
ros/src/show_tool/: CMakeLists.txt  package.xml
ros/src/teleop_twist_keyboard/: CMakeLists.txt  package.xml
scripts/: autocar_base.1.sh  autocar_base.sh  autocar_launch.sh  project_base.sh  ssh_link.sh
scripts/misc/: ssh_link.sh
src/car_demo/: CMakeLists.txt  package.xml
src/car_demo/nodes/: joystick_translator_agent
src/car_demo/rviz/: demo-for-nvidia.rviz  demo.rviz
src/car_demo/worlds/: mcity_backup.world
src/car_model/: CMakeLists.txt  README.md  package.xml
src/car_model/prius_agent/: CMakeLists.txt
src/car_msgs/: CMakeLists.txt  package.xml
src/car_msgs/msg/: base_obstacle.msg  base_obstacle_list.msg  chassis.msg  trajectory_point.msg
src/chassis/: CMakeLists.txt  chassis.h  chassis_adapter.cc  chassis_adapter.h  chassis_factory.h  gazebo_chassis.cc  gazebo_chassis.h  main.cc  vehicle_chassis.cc  vehicle_chassis.h
src/chassis/common/: CMakeLists.txt  chassis_gflags.cc  chassis_gflags.h
src/chassis/conf/: chassis.conf  chassis_arm.conf  chassis_arm_conf.yaml  chassis_conf.yaml
src/chassis/src/: usart.cc  (+2 more)
src/chassis/util/: CMakeLists.txt  gazebo_client.cc  gazebo_client.h  usart.cc  usart.h  usart_test.cc
src/common/: CMakeLists.txt  package.xml
src/common/base/app/: CMakeLists.txt
src/common/math/qp_solver/: CMakeLists.txt  active_set_qp_solver_test.cc  qp_solver.cc  qp_solver.h
src/control/: CMakeLists.txt  control.cc  control.h  main.cc  package.xml
src/control/common/: CMakeLists.txt  control_gflags.cc  control_gflags.h  trajectory_analyzer.cc  trajectory_analyzer.h
src/control/controller/: CMakeLists.txt  controller.h  lat_controller.cc  lat_controller.h  lon_controller.cc  lon_controller.h  mpc_controller.cc  mpc_controller.h  pid_controller.cc  pid_controller.h
src/debuggerpy/: CMakeLists.txt  debugger.py
src/gazebo_world/: CMakeLists.txt  package.xml
src/perception/: CMakeLists.txt
src/planning/: CMakeLists.txt  main.cc  main.cpp  package.xml  planning copy.cpp  planning copy.h  planning.cc  planning.h  planning_conf.yaml
src/planning/refrenceline/: CMakeLists.txt  refrenceline.cpp  refrenceline.h  refrenceline_provider.cc  refrenceline_provider.h  refrenceline_provider_test.cc
src/planning/tool/: CMakeLists.txt  Fitting.cpp  Fitting.h  Interpolating.cpp  Interpolating.h  analytic_polynomial.h  interpolating.cc  interpolating.h  interpolating_refrenceline.cc  interpolating_refrenceline.h  polynomial.cpp
src/prius_agent/: CMakeLists.txt  package.xml
src/show_tool/: CMakeLists.txt
src/simulation/: CMakeLists.txt  gazebo_simulation.cc  gazebo_simulation.h  main.cc  package.xml  simulation.h  simulation_factory.h
src/teleop_twist_keyboard/: CMakeLists.txt
stm32/: .gitignore
stm32/CIMIS/: stm32f4xx.h  system_stm32f4xx.c
stm32/Project/: JLinkLog.txt  Pro.uvguix.14755  Pro.uvguix_14755.bak  Pro.uvprojx  Pro_Target 1.dep  Pro_uvoptx.bak  Pro_uvprojx.bak
stm32/User/: main.c  stm32f4xx_it.c  stm32f4xx_it.h
test/: cubic_spline_test.cc
(+790 files in other folders)
